# caster_description

./: package.xml
launch/: model_v2.launch
mesh/: caster_body_fixed.stl
mesh/body_v3/: zms-kinova-sup_v4-urdf.stl  zms_fixed_v4-urdf.stl  zms_move_v4-urdf.stl
urdf/: caster_body.urdf.xacro  caster_body_sample.urdf.xacro  caster_body_v2.urdf.xacro  caster_v2.urdf.xacro  caster_xacro.xacro  caster_xacro_v2.xacro  common_properties.xacro
urdf/body/: caster_body_v2.urdf.xacro  caster_body_v3.urdf.xacro
